--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=cinemoa
 server.port=8088
 server.servlet.encoding.force=true
 
-# MySQL DB ?? ??
+# MySQL DB \uC811\uC18D \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cinemoa?serverTimezone=Asia/Seoul
 spring.datasource.username=jspid
@@ -12,30 +12,30 @@ spring.datasource.password=jsppass
 spring.datasource.data=classpath:/data.sql
 spring.datasource.initialization-mode=never
 
-# JPA ??
+# JPA \uC124\uC815
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ??/??? ?? ?? (MySQL 8 ??? ?? ?? ??)
+# \uD55C\uAE00/\uC774\uBAA8\uC9C0 \uAE68\uC9D0 \uBC29\uC9C0 (MySQL 8 \uC774\uC0C1\uC77C \uACBD\uC6B0 \uCD94\uAC00 \uAD8C\uC7A5)
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4
 
-# Mustache ??
+# Mustache \uC124\uC815
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.mustache
 spring.mustache.cache=false
 spring.mustache.charset=UTF-8
 
-# ?? ??? ?? ?? ????
+# \uC815\uC801 \uB9AC\uC18C\uC2A4 \uC790\uB3D9 \uCE90\uC2DC \uBE44\uD65C\uC131\uD654
 spring.web.resources.cache.cachecontrol.no-cache=true
 spring.web.resources.cache.cachecontrol.must-revalidate=true
 spring.web.resources.cache.cachecontrol.no-store=true
 
-# ?? ??? ?? ?? ?? (20MB)
+# \uD30C\uC77C \uC5C5\uB85C\uB4DC \uCD5C\uB300 \uD06C\uAE30 \uC124\uC815 (20MB)
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-# Gmail SMTP ??
+# Gmail SMTP \uC124\uC815
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=desigr.jw@gmail.com
